fixing spacing on work items pages and subtitle

--- a/src/About/About.scss
+++ b/src/About/About.scss
@@ -3,9 +3,9 @@
 .About {
   .bio-image {
     float: right;
-    margin: 1rem 0 1rem 1.5rem;
+    margin: 1rem 0 0rem 1.5rem;
     width: 300px;
-    background: $primary-color;
+    // background: $primary-color;
     border-radius: 0.2rem;
 
     .bio-image-container {
@@ -13,8 +13,7 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      border-top-left-radius: 0.2rem;
-      border-top-right-radius: 0.2rem;
+      border-radius: 0.2rem;
       width: 100%;
       height: 300px;
       transition: background 0.2s ease-in-out;
@@ -28,7 +27,7 @@
     }
     .bio-image-caption {
       padding: 0.4rem 0.4rem 0.6rem 0.4rem;
-      color: #fff;
+      // color: #fff;
       text-align: center;
       // font-family: $secondary-fonts;
       font-size: 0.7rem;
