--- a/src/Contact/Contact.scss
+++ b/src/Contact/Contact.scss
@@ -44,3 +44,8 @@
     width: 100%;
   }
 }
+
+.Success,
+.Error {
+  text-align: center;
+}
